DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[3.0.0 released - 11.27.2010]==================================================
Oct-10-2010 patrick     vrj::osg::AppViewer now sets flags on the camera held
                        by the context-specific osgViewer::Viewer object so
                        that the camera does not clear the color buffer or the
                        depth buffer itself.

[3.0.0 RC 1 released - 9.5.2010]===============================================

[3.0 beta 1 released - 6.19.2010]==============================================
Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
                        devices.
                        Submitted by Carsten Neumann.
                        NEW VERSION: 2.3.21
Jun-07-2010 patrick     Added vrj::osg::AppPager, a VR Juggler application
                        class that interacts with osgDB::DatabasePager.
                        Submitted by Lucie Lemonnier.
                        NEW VERSION: 2.3.20
Feb-25-2010 patrick     Added vrj::osg::AppViewer, a VR Juggler application
                        class that interacts with osgViewer.
                        Submitted by Christian Noon.
                        NEW VERSION: 2.3.19
Apr-19-2009 patrick     Updated for Gadgeteer 1.3.22.
                        NEW VERSION: 2.3.18
Mar-31-2009 patrick     Added support for creating OpenGL 3.0 contexts using
                        GLX and WGL. Submitted by Todd Furlong.
                        NEW VERSION: 2.3.17
Nov-18-2007 patrick     Updated for Gadgeteer 1.3.15. Now, Cocoa OpenGL windows
                        update their input area size correctly.
                        NEW VERSION: 2.3.16
Sep-26-2007 patrick     Fixed crash-on-exit problems with Sonix.
                        NEW VERSION: 2.3.15
Sep-19-2007 patrick     Added draw thread CPU affinity capabilities through the